# VLAC

./: .gitignore  README.md  README_CN.md  pyproject.toml
evo_vlac/examples/: data_filtering_example.py  image_pair-wise_critic_example.py  video_trajectory_critic_example.py  vla_example.py
evo_vlac/utils/: data_processing_vlm.py  model_utils.py
